CR-6723 - Adjust recon details to match mock up, hide error when valid success, fix alignment on live sync, prevent connector from ever relying on a template name

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/mappingView.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/mappingView.less
@@ -412,6 +412,7 @@ h4.connector-role {
 .boxed-stats {
   border: 1px solid #ddd;
   margin-bottom: 15px;
+  overflow:hidden;
 }
 .boxed-stats p {
   padding-bottom: 0;
