--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/scheduleView.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/scheduleView.less
@@ -9,6 +9,8 @@
   }
 
   .misfirePolicyBlock {
+    padding-top:4px;
+
     label {
       display:inline-block;
     }
